kfdef/monitoring/loki.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki-stack
  namespace: opf-stage
spec:
  serviceName: loki
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: loki
          image: 'grafana/loki:latest'
          args:
            - '-config.file=/var/shared/loki-config.yaml'
          ports:
            - containerPort: 3100
              name: loki-web
          volumeMounts:
            - name: loki-config
              mountPath: /var/shared/
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
            defaultMode: 420
